--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title><%= title %></title>
-  </head>
-  <body>
-    <div class="container">
-      <h1><%= title %></h1>
-      <p>Welcome to <%= title %></p>
-      <img src="public/images/NASA-Logo-Large.png" alt="">
-      <p>Please sign in</p>
-      <form>
-        <input id="sign-in-email" type="email" placeholder="Enter Email">
-        <input id="sign-in-password" type="password" placeholder="Enter Password">
-        <input type="submit" value="Sign In">
-      </form>
-      <button> Register</button>
+
+<%- include('includes/head.ejs')%>
+<%- include('includes/login_and_register_start.ejs')%>
+<div class="row text-center justify-content-center">
+  <form class="col-6" id="login-form" action="">
+    <div class="row text-center justify-content-center">
+      <input id="sign-in-email" type="email" placeholder="Enter Email" class="form-control col-12">
+      <input id="sign-in-password" type="password" placeholder="Enter Password" class="form-control col-12 mt-2d">
+      <input type="submit" value="Sign In" class="btn btn-primary col-4 mt-2">
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-  </body>
-</html>
+  </form>
+  <form class="col-12 mt-5" action="/users/register">
+    <div>Click here to <button type="submit" class="btn btn-link">register</button></div>
+  </form>
+</div>
+</div>
+<%- include('includes/end.ejs')%>
