Finish with cookies

--- a/views/includes/login_and_register_start.ejs
+++ b/views/includes/login_and_register_start.ejs
@@ -3,7 +3,7 @@
         <img src="/images/NASA-Logo-Large.png" alt="" class="image-fluid col-4">
         <h3 class="col-12"><%= pageTitle %></h3>
         <h5 class="col-12"><%= subTitle %></h5>
-        <%if (hasError){%>
+        <%if (error){%>
         <h6 class="col-12 text-danger"><%=error%></h6>
         <%}%>
     </div>
