--- a/views/register-password.ejs
+++ b/views/register-password.ejs
@@ -3,15 +3,17 @@
 <div class="row text-center justify-content-center">
     <form class="col-6 " id="register-form" action="/users/register-password" method="post">
         <div class="row text-center justify-content-center">
-            <input name="password1" id="password1" type="password" placeholder="Enter Password" class="form-control col-12">
-            <input name="password2" id="password2" type="password" placeholder="Enter Confirmed Password" class="form-control col-12 mt-2d">
+            <input name="password1" id="password1" type="password" placeholder="Enter Password"
+                   class="form-control col-12 mt-2" required>
+            <input name="password2" id="password2" type="password" placeholder="Enter Confirmed Password"
+                   class="form-control col-12 mt-2" required>
             <a id="register-back-button" class="btn btn-light col-2 mt-2" href="/users/register">Back</a>
             <input type="submit" value="Register" class="btn btn-primary col-2 mt-2">
         </div>
     </form>
-    <form class="col-12 mt-5" action="/">
-        <div>Already registered? go to <button type="submit" class="btn btn-link">login</button> page</div>
-    </form>
+    <p class="col-12 mt-5">
+        Already registered? go to <a href="/">login</a> page
+    </p>
 </div>
 </div>
 <%- include('includes/end.ejs')%>
