--- a/views/register-password.ejs
+++ b/views/register-password.ejs
@@ -1,12 +1,14 @@
 <%- include('includes/head.ejs')%>
 <%- include('includes/login_and_register_start.ejs')%>
 <div class="row text-center justify-content-center">
-    <form class="col-6 " id="register-form" action="/users/register-password" method="post">
+    <form class="col-6 form-floating" id="register-password-form" action="/users/register-password" method="post">
         <div class="row text-center justify-content-center">
             <input name="password1" id="password1" type="password" placeholder="Enter Password"
-                   class="form-control col-12 mt-2" required>
+                   class="form-control col-12 mt-2" required maxlength="32">
+            <label for="password1"></label>
             <input name="password2" id="password2" type="password" placeholder="Enter Confirmed Password"
-                   class="form-control col-12 mt-2" required>
+                   class="form-control col-12 mt-2" required maxlength="32">
+            <label for="password2"></label>
             <a id="register-back-button" class="btn btn-light col-2 mt-2" href="/users/register">Back</a>
             <input type="submit" value="Register" class="btn btn-primary col-2 mt-2">
         </div>
@@ -16,4 +18,5 @@
     </p>
 </div>
 </div>
+<script src="/javascripts/loginJava.js"> </script>
 <%- include('includes/end.ejs')%>
