Add documenation, fix email pattern in html, and add password validation in password form.

--- a/views/includes/login_and_register_start.ejs
+++ b/views/includes/login_and_register_start.ejs
@@ -4,7 +4,7 @@
         <h3 class="col-12"><%= pageTitle %></h3>
         <h5 class="col-12"><%= subTitle %></h5>
         <%if (error){%>
-        <h6 class="col-12 text-danger"><%=error%></h6>
+        <h6 class="col-12 text-danger" id="errorMsg"><%=error%></h6>
         <%}%>
     </div>
 
