--- a/views/register-password.ejs
+++ b/views/register-password.ejs
@@ -18,5 +18,5 @@
     </p>
 </div>
 </div>
-<script src="/javascripts/loginJava.js"> </script>
+<script src="/javascripts/passwordHandle.js"> </script>
 <%- include('includes/end.ejs')%>
