--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<%- include('includes/head.ejs')%>
+<%- include('includes/login_and_register_start.ejs')%>
+</div>
+<%- include('includes/end.ejs')%>
