--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <%- include('includes/head.ejs')%>
 <%- include('includes/login_and_register_start.ejs')%>
 <div class="row text-center justify-content-center">
-  <form class="col-6" id="login-form" action="">
+  <form class="col-6" id="login-form" action="/" method="post">
     <div class="row text-center justify-content-center">
       <label for="sign-in-email"></label>
       <input id="sign-in-email" type="email" placeholder="Enter Email" class="form-control col-12 mt-2" required
