--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,13 +8,14 @@
             </figure>
         </div>
     </div>
-    <div class="row text-center d-none" id = "afterLogin">
+    <div class="row text-center" id = "afterLogin">
         <div class="col-12" id ="welcome"></div>
         <form action="https://api.nasa.gov/planetary/apod" id="dateForm">
             <label class="h5 col" for="pictureDate">Please choose a picture date:</label>
             <input class = "col" type="date" id="pictureDate" name="pictureDate">
             <button class="btn btn-primary mt-2 col" type="submit">Send</button>
         </form>
+        <ol id="content-list" class="list-group"></ol>
     </div>
     <div class="row">
         <div class="col-12">
@@ -26,6 +27,7 @@
             <button type="button" class="btn btn-primary d-none" id="moreComments" >Load more</button></div>
     </div>
 </div>
+
 <button type="button" class="btn btn-primary d-none" data-bs-toggle="modal" data-bs-target="#errorModal" id="errorModalBtn">
 </button>
 <div class="modal" tabindex="-1" id="errorModal" aria-labelledby="contentErrorModal">
@@ -43,5 +45,5 @@
         </div>
     </div>
 </div>
-
+<script src="/javascripts/homeJS.js"></script>
 <%- include('includes/end.ejs')%>
