comments init db

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,15 +16,7 @@
             <button class="btn btn-primary mt-2 col" type="submit">Send</button>
         </form>
         <ol id="content-list" class="list-group"></ol>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <ul class="list-group" id="pictures">
-            </ul>
-        </div>
-    </div>
-    <div class="row mt-2"><div class="col me-auto">
-            <button type="button" class="btn btn-primary d-none" id="moreComments" >Load more</button></div>
+        <button id="show-more-button" style="display: none">Show More</button>
     </div>
 </div>
 
