--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,11 +2,11 @@
 <div class="container">
     <div class="row align-items-center">
         <img class="col-1 img-fluid fw-bold" src="./images/NASA-Logo-Large.png" alt="">
-        <div class="col">Created by <cite title="Source Title">Yair Dor and Michal Bucks</cite></div>
+        <div class="col">Created by <cite>Yair Dor and Michal Bucks</cite></div>
     </div>
     <div class="row">
         <h1 class="col-12 text-center">NASA Social Network</h1>
-        <div class="col-12 text-center h3 title-text">Hello<%if(username){ %> <%-username-%><%}%></div>
+        <div class="col-12 text-center h3 title-text">Hello<%if(username){ %> <cite class="title-text"><%-username-%></cite><%}%></div>
         <form class="col-12 text-center" action="/home/logout">
             <button class="btn btn-danger" type="submit">Logout</button>
         </form>
@@ -19,10 +19,15 @@
             <button class="btn btn-primary mt-2 col" type="submit">Send</button>
         </form>
         <ol id="content-list" class="list-group"></ol>
-        <button id="show-more-button" class="col-12 my-2" style="display: none">Show More</button>
+<!--        <button id="show-more-button" class="col-12 my-2" style="display: none">Show More</button>-->
+        <button id="show-more-button" class="col-12 btn btn-primary my-2 d-none">Show More</button>
     </div>
 </div>
-
+<div class="spinner-background">
+    <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
 <button type="button" class="btn btn-primary d-none" data-bs-toggle="modal" data-bs-target="#errorModal" id="errorModalBtn">
 </button>
 <div class="modal" tabindex="-1" id="errorModal" aria-labelledby="contentErrorModal">
