--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,9 @@
             <input class = "col" type="date" id="pictureDate" name="pictureDate">
             <button class="btn btn-primary mt-2 col" type="submit">Send</button>
         </form>
-        <ol id="content-list" class="list-group"></ol>
+    </div>
+    <div class="row">
+        <ol id="content-list" class="list-group col-12"></ol>
 <!--        <button id="show-more-button" class="col-12 my-2" style="display: none">Show More</button>-->
         <button id="show-more-button" class="col-12 btn btn-primary my-2 d-none">Show More</button>
     </div>
