--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@
         <button id="show-more-button" class="col-12 btn btn-primary my-2 d-none">Show More</button>
     </div>
 </div>
-<div class="spinner-background">
+<div class="spinner-background" id="spinner-background">
     <div class="spinner-border text-primary" role="status">
         <span class="visually-hidden">Loading...</span>
     </div>
