--- a/views/includes/login_and_register_start.ejs
+++ b/views/includes/login_and_register_start.ejs
@@ -6,7 +6,7 @@
     </div>
     <%if (error){%>
         <div class = "row">
-            <h6 class="col-6 text-danger me-auto offset-3 ">Some errors occurred:</h6>
+            <%if(!error.includes("success")){%><h6 class="col-6 text-danger me-auto offset-3 ">Some errors occurred:</h6><%}%>
             <h6 class="col-6 text-danger me-auto offset-3" id="errorMsg"><%-error%></h6>
         </div>
     <%}%>
