--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <%- include('includes/head.ejs')%>
+<div id="token" class="d-none"><%if(token){%><%=token%><%}%></div>
 <div class="container">
     <div class="row align-items-center">
         <img class="col-1 img-fluid fw-bold" src="./images/NASA-Logo-Large.png" alt="">
