--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <div id="token" class="d-none"><%if(token){%><%=token%><%}%></div>
 <div class="container">
     <div class="row align-items-center">
-        <img class="col-1 img-fluid fw-bold" src="./images/NASA-Logo-Large.png" alt="">
+        <img class="col-3 col-md-2 col-xl-1 img-fluid fw-bold" src="./images/NASA-Logo-Large.png" alt="">
         <div class="col">Created by <cite>Yair Dor and Michal Bucks</cite></div>
     </div>
     <div class="row">
