--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,8 +6,8 @@
     <div class="row text-center justify-content-center">
       <label for="email"></label>
       <input id="email" name="email" type="email" placeholder="Enter Email" class="form-control col-12 mt-2" required
-      pattern='/^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/'
-      maxlength="32">
+             pattern='^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+             maxlength="32">
       <label for="password"></label>
       <input id="password" type="password" name="password" placeholder="Enter Password" class="form-control col-12 mt-2"
       maxlength="32" required>
