--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
       <label for="password"></label>
       <input id="password" type="password" name="password" placeholder="Enter Password" class="form-control col-12 mt-2"
       maxlength="32" required>
-      <input type="submit" value="Sign In" class="btn btn-primary col-4 mt-2" required>
+      <input type="submit" value="Sign In" class="btn btn-primary col-4 mt-2">
     </div>
   </form>
   <p class="col-12 mt-5">
