Change little things.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <%- include('includes/head.ejs')%>
 <div id="token" class="d-none"><%if(token){%><%=token%><%}%></div>
+<!--<div id="token" class="d-none"></div>-->
 <div class="container">
     <div class="row align-items-center">
         <img class="col-3 col-md-2 col-xl-1 img-fluid fw-bold" src="./images/NASA-Logo-Large.png" alt="">
